# Muza-CXX

./: .clang-tidy  .clangd  .gitignore  CMakeBuffer.txt  CMakeLists.txt  acetza.py  clangd-help  pyproject.toml
MindG/: CMakeLists.txt
MindG/include/acetza/mindg/: Manager.hpp
MindG/source/: main.cpp
Muza/: CMakeLists.txt
Muza/include/acetza/: test.hpp
Muza/include/acetza/muza/: Frames.hpp  Samples.hpp  constants.hpp  primitives.hpp  sample_rate.hpp  types.hpp
Muza/include/acetza/muza/functions/: numberers.hpp  primitives.hpp  transformers.hpp
Muza/include/acetza/muza/wave/: frame.hpp  frames.hpp  lambdas.hpp  sample_rate.hpp  samples.hpp  wave.hpp
Muza/include/acetza/muza/wavers/: Basic.hpp  Enveloper.hpp  Harmonizer.hpp  basic.hpp  concepts.hpp  enveloper.hpp  harmonizer.hpp
Muza/include/acetza/muza/wavers/concepts/: frequencyr.hpp  waver.hpp
Muza/include/acetza/muza/wavers/enveloper/: concepts.hpp  transform.hpp
Muza/include/acetza/muza/wavers/harmonizer/: concepts.hpp
Muza/source/: main.cpp
Muza/source/acetza/muza/Samples/: Samples.cpp
Muza/source/acetza/muza/Wave/: Wave.cpp  sample_rate.cpp
Muza/source/acetza/muza/functions/numberers.hpp/: numberers.cpp
Muza/source/acetza/muza/functions/primitives.hpp/: primitives.cpp
Muza/source/acetza/muza/functions/transformers.hpp/: transformers.cpp
Muza/source/acetza/muza/primitives/: primitives.cpp
Muza/source/acetza/muza/wave/frame.hpp/class Frame/: constructors.cpp  io.cpp  operators.cpp  properties.cpp
Muza/source/acetza/muza/wave/frames.hpp/class Frames/: constructors.cpp
Muza/source/acetza/muza/wave/sample_rate.hpp/: sample_rate.cpp
Muza/source/acetza/muza/wave/samples.hpp/class Samples/: constructors.cpp
Muza/source/acetza/muza/wave/wave.hpp/class Wave/: add.cpp  constructors.cpp  getters.cpp  io.cpp  operations.cpp  operators.cpp  sample_rate.cpp  setters.cpp
Muza/source/acetza/muza/wavers/Basic/: getters.cpp  wave.cpp
Muza/source/acetza/muza/wavers/basic.hpp/class Basic/: Basic.cpp  builders.cpp  getters.cpp  setters.cpp  wave.cpp
Muza/source/acetza/muza/wavers/enveloper/transform.hpp/: transform.cpp
Muza/source/acetza/test.hpp/: test.cpp
c/: reformat.fish
c/source/: main.c
fish/: build.fish  init.fish  lint.fish  run.fish
fish/debug/: build.fish  clean.fish  full-build.fish  init.fish  (+1 more)
py/: build.py  init.py  run.py
source/: main.c  main.cpp  main.cxx
(+66 files in other folders)
