cmake_minimum_required(VERSION 3.28)
project(Acetza)
file(GLOB_RECURSE MUZA_SOURCE "source/*c")
add_executable(muza ${MUZA_SOURCE})
set_property(TARGET muza PROPERTY C_STANDARD 23)
set_property(TARGET muza PROPERTY C_STANDARD_REQUIRED ON)
target_include_directories(muza PRIVATE "include")
set_property(TARGET muza PROPERTY COMPILE_WARNING_AS_ERROR ON)
