file(GLOB_RECURSE MINDG_SOURCE "MindG/source/*.cpp")
add_executable(MindG ${MINDG_SOURCE})
set_property(TARGET MindG PROPERTY COMPILE_WARNING_AS_ERROR ON)
set_property(TARGET MindG PROPERTY C_STANDARD 23)
set_property(TARGET MindG PROPERTY C_STANDARD_REQUIRED ON)
set_property(TARGET MindG PROPERTY CXX_STANDARD 23)
set_property(TARGET MindG PROPERTY CXX_STANDARD_REQUIRED ON)
