find_package(SFML 2.6 REQUIRED COMPONENTS graphics window system)
file(GLOB_RECURSE MINDG_SOURCE "MindG/source/*.cpp")
add_executable(MindG ${MINDG_SOURCE})
set_property(TARGET MindG PROPERTY COMPILE_WARNING_AS_ERROR ON)
set_property(TARGET MindG PROPERTY C_STANDARD 23)
set_property(TARGET MindG PROPERTY C_STANDARD_REQUIRED ON)
set_property(TARGET MindG PROPERTY CXX_STANDARD 23)
set_property(TARGET MindG PROPERTY CXX_STANDARD_REQUIRED ON)
target_include_directories(MindG PRIVATE "MindG/include")
target_include_directories(MindG SYSTEM PRIVATE ${SFML_INCLUDE_DIR})
target_link_libraries(MindG ${SFML_LIBRARIES})
