include(FindPkgConfig)
pkg_check_modules(SNDFILE REQUIRED sndfile>=1.2.2)
file(GLOB_RECURSE MUZA_SOURCES "Muza/source/*.cpp")
add_executable(Muza ${MUZA_SOURCES})
set_property(TARGET Muza PROPERTY COMPILE_WARNING_AS_ERROR ON)
set_property(TARGET Muza PROPERTY C_STANDARD 23)
set_property(TARGET Muza PROPERTY C_STANDARD_REQUIRED ON)
set_property(TARGET Muza PROPERTY CXX_STANDARD 23)
set_property(TARGET Muza PROPERTY CXX_STANDARD_REQUIRED ON)
target_compile_options(Muza PRIVATE ${SNDFILE_CFLAGS} ${SNDFILE_CFLAGS_OTHER})
target_compile_options(Muza PRIVATE -Wall -Wextra -Wpedantic)
target_link_options(Muza PRIVATE ${SNDFILE_LDFLAGS} ${SNDFILE_LDFLAGS_OTHER})
target_link_directories(Muza PRIVATE ${SNDFILE_LIBRARY_DIRS})
target_include_directories(Muza PRIVATE "Muza/include")
target_link_libraries(Muza m ${SNDFILE_LIBRARIES} ${SNDFILE_LINK_LIBRARIES})
